--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^1.1.1
   cached_network_image: ^2.5.0
   flutter_svg: ^0.19.1
+  dots_indicator: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +63,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/pages/onboard/slider-1.svg
+    - assets/pages/onboard/slider-2.svg
+    - assets/pages/onboard/slider-3.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
